--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.10",
     "eslint": "^8.56.0",
+    "hls.js": "^1.5.4",
     "pino-pretty": "^10.3.1",
     "prettier": "^3.2.4",
     "ts-node": "^10.9.2",
