--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,33 @@ services:
     volumes:
       - storage:/home/node/app/tmp
     restart: always
+  
+  nginx_proxy:
+    image: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/nginx/certbot:ro
+    depends_on:
+      - server
+    networks:
+      - web
+
+  certificates:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/nginx/certbot
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      - nginx_proxy
+    command: certbot certonly --webroot --webroot-path=/var/www/certbot --email ${EMAIL} --agree-tos -d ${DOMAIN}
+    networks:
+      - web
 
 volumes:
   storage:
+
+networks:
+  web:
