update env and add csp nonce

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 TZ=UTC
 PORT=3333
-HOST=localhost
+HOST=0.0.0.0
 LOG_LEVEL=info
 APP_KEY=-m4OKuJMIAyrJaOpBteukZfhUht_5iUg
 NODE_ENV=development
 SESSION_DRIVER=cookie
-APP_URL=
-ANCESTOR_URL=
+APP_URL=http://localhost:3333
+ANCESTOR_URL=http://localhost:3333
